# usa

./: README.md  config.sample.toml  pyproject.toml  usa.py
usa/: cli.py  settings.py  shortcuts.py
